--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
-	<script type="text/javascript" src="scripts.js"></script>
+	<script type="text/javascript" src="dao.js"></script>
+	<script type="text/javascript" src="controller.js"></script>
 </head> 
 <body> 
 
