List the saved records.

--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,13 @@
 		
 		<button type="button" onclick="create()">Create</button>
 		<button type="button" onclick="retrieveById()">Retrieve by ID</button>
+		<button type="button" onclick="list()">List</button>
 		<button type="button" onclick="deleteAll()">Delete all</button>
+		
+		<div id="listDiv" style="display:none;">
+			<h3>Records list</h3>
+			<span id="list"></span>
+		</div>
 		
 		<h3>Geolocation</h3>
 		<form>
