New update and delete methods.

--- a/views/index.erb
+++ b/views/index.erb
@@ -29,6 +29,8 @@
 		<button type="button" onclick="create()">Create</button>
 		<button type="button" onclick="retrieveById()">Retrieve by ID</button>
 		<button type="button" onclick="list()">List</button>
+		<button type="button" onclick="updateById()">Update by ID</button>
+		<button type="button" onclick="deleteById()">Delete by ID</button>
 		<button type="button" onclick="deleteAll()">Delete all</button>
 		
 		<div id="listDiv" style="display:none;">
