New model script.

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 	<script type="text/javascript" src="dao.js"></script>
 	<script type="text/javascript" src="controller.js"></script>
+	<script type="text/javascript" src="model.js"></script>
 </head> 
 <body> 
 
