Create the components via javascript.

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 	<script type="text/javascript" src="dao.js"></script>
 	<script type="text/javascript" src="controller.js"></script>
 	<script type="text/javascript" src="model.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 </head> 
 <body> 
 
@@ -22,9 +22,7 @@
 	<div data-role="content">	
 
 		<h3>Generic model object</h3>
-		<form>
-			<label for="id">Id:</label> <input type="text" id="id"/>
-			<label for="description">Description:</label> <input type="text" id="description"/>
+		<form id="form">
 		</form>
 		
 		<button type="button" onclick="create()">Create</button>
