Add documentation to methods and create new checkboxes and radioboxes components.

--- a/views/index.erb
+++ b/views/index.erb
@@ -23,8 +23,9 @@
 
 		<h3>Generic model object</h3>
 		<form id="form">
-		</form>
+		</form> <!-- /the form components are created via JavaScript -->
 		
+		<h3>Actions:</h3>
 		<button type="button" onclick="create()">Create</button>
 		<button type="button" onclick="retrieveById()">Retrieve by ID</button>
 		<button type="button" onclick="list()">List</button>
