import jquery files from local public directory

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,12 +4,12 @@
 <head> 
 	<title>Storage and Geolocation sample</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+	<link rel="stylesheet" href="jquery.mobile-1.0.min.css" />
+	<script type="text/javascript" src="jquery-1.6.4.min.js"></script>
 	<script type="text/javascript" src="dao.js"></script>
 	<script type="text/javascript" src="controller.js"></script>
 	<script type="text/javascript" src="model.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+	<script type="text/javascript" src="jquery.mobile-1.0.min.js"></script>
 </head> 
 <body> 
 
