--- a/views/remote.erb
+++ b/views/remote.erb
@@ -2,10 +2,10 @@
     <head> 
 	    <title>Sample jQuery remote request</title>
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+	    <link rel="stylesheet" href="jquery.mobile-1.0.min.css" />
 	    <link rel="stylesheet" href="style.css" />
-	    <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-	    <script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+	    <script type="text/javascript" src="jquery-1.6.4.min.js"></script>
+	    <script type="text/javascript" src="jquery.mobile-1.0.min.js"></script>
     </head> 
 
     <body> 
@@ -38,7 +38,6 @@
 
                 if (operando && operador) {
                     $('#block-ui').show();
-
                     $.ajax('calculate', {
                         data: {
                             'operand' : operando,
