--- a/views/index.erb
+++ b/views/index.erb
@@ -5,11 +5,11 @@
 	<title>Storage and Geolocation sample</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="jquery.mobile-1.0.min.css" />
-	<script type="text/javascript" src="jquery-1.6.4.min.js"></script>
-	<script type="text/javascript" src="dao.js"></script>
-	<script type="text/javascript" src="controller.js"></script>
-	<script type="text/javascript" src="model.js"></script>
-	<script type="text/javascript" src="jquery.mobile-1.0.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
+	<script type="text/javascript" src="js/dao.js"></script>
+	<script type="text/javascript" src="js/controller.js"></script>
+	<script type="text/javascript" src="js/model.js"></script>
+	<script type="text/javascript" src="js/jquery.mobile-1.0.min.js"></script>
 </head> 
 <body> 
 
